src/main/metadata/objects/Ideas__c.object
<CustomObject>
    <fields>
        <fullName>Applicability__c</fullName>
        <label>Applicability</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>As_Is_Business_Requirements__c</fullName>
        <label>As-Is Business Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Benefits__c</fullName>
        <label>Business Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>oCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>aCRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Miscellaneous</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Quality Improvement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Reduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Improvements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_Estimate_Class_A__c</fullName>
        <description>Cost estimation for an Idea</description>
        <label>Cost Estimate (Class A)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Brief Description about Idea</description>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>High_Level_Solution__c</fullName>
        <label>High Level Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Idea_Reference_ID__c</fullName>
        <inlineHelpText>Reference ID should be in this format- TER 2014-02</inlineHelpText>
        <label>Idea Reference ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Like_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used to count number of votes</description>
        <label>Like Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PointsSummary__c</fullName>
        <description>To display images in the list view based on the points</description>
        <formula>IF( Points__c&gt;= 50, IMAGE( $Label.Url_for_Rug_max_static ,"Hot"),
IF ( Points__c&gt; 20 &amp;&amp; Like_Count__c&lt;50, IMAGE( $Label.Url_for_Rug_Med_static, "Medium"),
IMAGE($Label.Url_for_Rug_Low_static, "Low")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PointsSummary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>Formula to multiply the like count with 10</description>
        <formula>Like_Count__c *10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taken up for product roadmap</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Be_Business_Requirements__c</fullName>
        <label>To-Be Business Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Idea</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Points__c</columns>
        <columns>PointsSummary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Ideas_Takenup_for_Roadmap</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Category__c</columns>
        <columns>Points__c</columns>
        <columns>PointsSummary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Taken up for product roadmap</value>
        </filters>
        <label>Ideas Takenup for Roadmap</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Ideas</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Like_Count__c</columns>
        <columns>PointsSummary__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Ideas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Open_Ideas</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Points__c</columns>
        <columns>PointsSummary__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Ideas</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Idea Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Idea</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Block_Idea_Edit_for_Portal_Users</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISNEW()),OR($Profile.Name==$Label.Rug_CommunityuserProfile ,$Profile.Name==$Label.Rug_CommunityOwnerProfile),$Setup.IdeaEditing__c.EditingAccess__c==false,
OwnerId!= $User.Id )</errorConditionFormula>
        <errorMessage>You don't have the permission to edit the record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Honorary_profile_and_status_check</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(Status__c,'Taken up for product roadmap') &amp;&amp;  $Profile.Name=='Honorary Membership' &amp;&amp;  Not(ISNEW())</errorConditionFormula>
        <errorMessage>You dont have access to select this picklist value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>New_record_status_should_be_open</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()  &amp;&amp; NOT(ISPICKVAL(Status__c, 'open'))</errorConditionFormula>
        <errorMessage>Idea should be in "Open" status for new idea creation</errorMessage>
    </validationRules>
</CustomObject>